css/footer.css
.a {
  background-color: rgb(255, 255, 255);
  font-family: "Montserrat";
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
}

.c {
  font-style: italic;
  position: fixed;
  text-align: center;
  background: linear-gradient(to right, #a86603, #914804);
  color: white;
  bottom: 0;
  width: 100%;
  padding: 4px;
  z-index: 5;
}

.d {
  float: right;
  padding: 32px;
  font-family: "Montserrat";
}

.h {
  padding: 32px;
}

.i {
  padding: 32px;
}

.b {
  padding: 32px;
}

.aa {
  font-family: "Montserrat";
  display: flex;
  flex-direction: row;
}

.facebook {
  position: relative;
  width: 32px;
  padding: 20px;
}

.instagram {
  position: relative;
  width: 32px;
  padding: 20px;
}

.twitter {
  position: relative;
  width: 32px;
  padding: 20px;
}

.f {
  margin-bottom: 32px;
  width: 100%;
}

